--- a/webext/src/content/Fast.css
+++ b/webext/src/content/Fast.css
@@ -1,19 +1,29 @@
+#fast-wrapper {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 99999999;
+}
+
 #fast {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-top: 0;
+  width: 100%;
   line-height: unset;
   background: #000;
   color: #eee;
   font-weight: bold;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  position: fixed;
-  top: 30%;
-  left: 0;
-  width: 100%;
-  padding: 1.3rem 0;
+  padding: 2.3rem 0;
   border-top: 10px solid #444;
   border-bottom: 10px solid #444;
   font-size: 3.5rem;
   font-family: sans-serif;
-  z-index: 99999999;
 }
 
 #fast::before, #fast::after {
