--- a/webext/src/content/Fast.css
+++ b/webext/src/content/Fast.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,0.8);
+  backdrop-filter: blur(4px) brightness(40%);
   z-index: 99999999;
 }
 
